# raylib-cmake-game-template

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
